<resources>
    <string name="app_name">BCA Sekuritas-Dev</string>
    <string name="deep_link">percobaan-67fdd.web.app</string>
    <string name="error_retry_api">Please retry!</string>
    <string name="error_default_api">Something wrong happened!</string>
    <string name="default_error_message">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="search_hint">Cari…</string>
    <string name="profile_choose_photo">Ambil gambar dari</string>
    <string name="profile_choose_file">Ambil file dari</string>
    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_portofolio">Portfolio</string>
    <string name="menu_news">News</string>
    <string name="menu_profile">Profile</string>
    <string name="logout_description">Keluar dari aplikasi?</string>
    <string name="logout_button_positive">Logout</string>
    <string name="logout_button_negative">Batal</string>
    <string name="ask_choose_photo">Ambil gambar dari</string>
    <string name="ask_choose_file">Ambil file dari</string>
    <string name="ask_permission_title">Izin Dibutuhkan</string>
    <string name="ask_permission_description">Skolla membutuhkan izin storage untuk mencadangkan dan memulihkan data. Skolla juga membutuhkan akses kamera untuk perbaharuan foto profile kamu. Izinkan akses supaya Skollamate bisa mengakses fitur-fitur berikut.</string>
    <string name="ask_permission_button_positive">Izinkan</string>
    <string name="permission_denied_title">Gagal Akses</string>
    <string name="permission_denied_description">Fitur ini tidak dapat diakses karena tidak diberikan izin pada device anda. Silahkan lakukan pengaturan ulang pada device anda.</string>
    <string name="permission_denied_button">OKE</string>
    <string name="permission_denied_read_write_description">Maaf kak, kami tidak dapat menulis data di handphone kakak karena tidak diizinkan oleh kakak. Tolong diaktifkan terlebih dahulu.</string>
    <string name="permission_denied_read_write_button">Aktifkan</string>
    <string name="session_expired_title">Sesi Akun Berakhir</string>
    <string name="session_expired_description">Kamu telah login di perangkat lain. Silakan login kembali jika kamu ingin melakukan aktivitas kamu di perangkat ini</string>
    <string name="session_expired_button_positive">Oke</string>
    <string name="dialog_preview_title">Selamat datang di App!</string>
    <string name="dialog_preview_description">Kami selalu memberikan servis terbaik kepada customer, karena kamu sangat berati</string>
    <string name="dialog_preview_button">LET\'S DO IT!</string>
    <string name="automatic_time_title">Ubah Pengaturan Anda</string>
    <string name="automatic_time_description">Untuk dapat memulai tryout silakan ubah pengaturan waktu anda ke mode otomatis</string>
    <string name="automatic_time_button">OKE</string>
    <string name="error_network_title">Whoops!</string>
    <string name="error_network_description">Tidak ada koneksi. Pastikan Wifi dan Data anda menyala</string>
    <string name="error_network_interupted_title">Koneksi Terputus!</string>
    <string name="error_network_interupted_description">Koneksi terputus. Cek kembali koneksi kamu</string>
    <string name="error_network_null_description">Respon Kosong. Cek kembali koneksi kamu</string>
    <string name="error_network_facebook">Error. Silakan lakukan setting akses email pada facebook-mu untuk masuk ke dalam aplikasi ini</string>
    <string name="error_network_409">Kamu telah login di perangkat lain.</string>
    <string name="error_network_404_title">Not Found!</string>
    <string name="error_network_404">Layanan tidak tersedia.\nSilakan coba kembali</string>
    <string name="error_network_500_title">Internal Server Error!</string>
    <string name="error_network_500">Sistem sedang ada masalah. Silakan coba beberapa saat lagi</string>
    <string name="error_exercise_not_found_title">Mohon Maaf...</string>
    <string name="error_exercise_not_found_description">Saat ini soal belum tersedia pada Bank Soal, silahkan pilih Bab atau Sub Bab yang lain</string>
    <string name="error_general_title">Ada error nih...</string>
    <string name="error_general_description">Sedang ada error pada aplikasi ini. Jangan khawatir, kami sedang berusaha memperbaiki masalahnya!</string>
    <string name="error_forbidden_title">Tidak Berlangganan Premium</string>
    <string name="error_forbidden_description">Saat ini akun kamu sedang tidak berlangganan premium di Skolla. Silakan hubungi admin untuk berlangganan premium.</string>
    <string name="error_forbidden_button">Premium Skolla</string>
    <string name="error_forbidden_info_title">Silakan masuk kembali</string>
    <string name="error_forbidden_info_description">Akun Skolla-mu dikeluarkan secara otomatis karena sesi kamu habis. Silakan lakukan login kembali.</string>
    <string name="error_forbidden_info_button">OKE</string>
    <string name="error_corrupt_file_title">File bermasalah..</string>
    <string name="error_corrupt_file_description">File tidak dapet dibuka. Silahkan download ulang</string>
    <string name="error_corrupt_file_button">OKE</string>
    <string name="error_connection_time_out">Failed to connect to server please check you network!</string>
    <string name="error_network_button">Tutup</string>
    <string name="error_network_interupted_button">Coba Lagi</string>
    <string name="error_google_title">Terjadi kesalahan saat menyambung ke Google</string>
    <string name="error_google_description">Terjadi kesalahan pada saat menyambung ke Google. Kode Error: %1$d</string>
    <string name="error_google_button">OKE</string>
    <string name="profile_welcome_name">Hai, %1$s!</string>
    <string name="profile_form_empty_validation">%1$s tidak boleh kosong</string>
    <string name="profile_form_min_char_validation">%1$s minimal 11 angka</string>
    <string name="profile_title_name">Nama</string>
    <string name="profile_hint_name">Nama Lengkap</string>
    <string name="profile_title_email">Email</string>
    <string name="profile_hint_email">Email</string>
    <string name="profile_title_phone">Kontak Whatsapp</string>
    <string name="profile_hint_phone">Masukkan nomor Whatsapp</string>
    <string name="booking_title_plat_no">Kontak Whatsapp</string>
    <string name="booking_hint_plat_no">Masukkan nomor Whatsapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_booking_confirm_title">Membuat nomor urut booking</string>
    <string name="dialog_booking_confirm_description">Lanjutkan proses booking untuk kendaranmu?</string>
    <string name="dialog_booking_confirm_positive_button">Oke</string>
    <string name="dialog_booking_confirm_negative_button">Nanti dulu</string>
    <string name="dialog_booking_success_title">Berhasil Booking</string>
    <string name="dialog_booking_success_description">Booking servis kendaran telah berhasil</string>
    <string name="dialog_booking_success_positive_button">Oke</string>
    <string name="difficulty_information">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="text_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="text_title_delete_account">Delete BCA Sekuritas \nAccount </string>
    <string name="bullet">\u2022</string>
    <string name="text_corporate_news">Corporate News</string>
    <string name="text_desc_corporate_news">News: New contract of WSKT has reached 72%</string>
    <string name="text_corporate_notification">Corporate Notification</string>
    <string name="text_desc_corporate_notification">BBCA Report: BBCA Financial Report[BBCA]</string>
    <string name="text_desc_price_alert"><![CDATA[WSBP has reached you target price (<=500)]]></string>
    <string name="text_price_alert">Price Alert</string>
    <string name="text_trending_stocks">Trending Stocks</string>
    <string name="text_desc_trending_stocks">One of the stocks in you watchlist in now trending (BBCA)</string>
    <string name="text_desc_e_statments">Please choose document type and time to download document</string>
    <string name="text_report_type">Report Type</string>
    <string name="text_year">Year</string>
    <string name="text_month">Month</string>
    <string name="text_guide_e_statements">2 digit date of birth + 2 digit month of birth + 2 digit year of birth</string>
    <string name="text_title_guide_e_statements">To open the reports, please use your password in <b>DDMMYY</b> format:</string>
    <string name="text_send_to_my_email">Send To My Email</string>
    <string name="text_change_email">Change Email</string>
    <string name="text_change_mobile_number">Change Mobile Number</string>
    <string name="text_change_bank_account">Change Bank Account</string>
    <string name="text_change_pin">Change PIN</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_current_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_enter_current_password">Enter current password</string>
    <string name="text_create_new_password">Create new password</string>
    <string name="text_re_enter_new_password">Re-enter new password</string>
    <string name="text_save_changes">Save Changes</string>
    <string name="text_transfer_fund_to_this_account">Transfer fund to this account</string>
    <string name="text_bank_account">Bank Account</string>
    <string name="text_how_to_transfer">How to Transfer</string>
    <string name="text_m_banking">M-Banking</string>
    <string name="text_internet_banking">Internet Banking</string>
    <string name="text_branch">Branch</string>
    <string name="text_withdrawable_amount">Withdrawable Amount</string>
    <string name="text_processed_amount">Processed Amount</string>
    <string name="text_transfer_to">Transfer to</string>
    <string name="text_amount">Amount</string>
    <string name="text_step_withdraw_1">Cash withdrawals after 14:30 WIB will be processed on the next working day. </string>
    <string name="text_step_withdraw_2">Withdrawals to a bank account different from RDN bank may incur a transfer fee. </string>
    <string name="text_step_withdraw_3">The funds will be credited to the withdrawal account within a maximum of 1x24 hours on working day (domestic bank).</string>
    <string name="text_step_withdraw_4">Limit penarikan Saldo RDN berbeda-beda sesuai dengan kebikan perusahaan</string>
    <string name="text_filter">Filter</string>
    <string name="text_time">Time</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="text_transaction">Transaction</string>
    <string name="text_all">All</string>
    <string name="text_dividend">Dividend</string>
    <string name="text_withdrawal">Withdrawal</string>
    <string name="text_apply">Apply</string>
    <string name="text_reset">Reset</string>
    <string name="text_top_up">Top Up</string>
    <string name="text_last_price">Last Price</string>
    <string name="text_change">Change</string>
    <string name="symbol_percent">%</string>
    <string name="text_open">Open</string>
    <string name="text_high">High</string>
    <string name="text_low">Low</string>
    <string name="text_value_t">Value(T)</string>
    <string name="text_volume_t">Volume(T)</string>
    <string name="text_freq">Freq</string>
</resources>