<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/bgPrimary"
                android:orientation="horizontal">

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_last_price"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_change"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/symbol_percent"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_open"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_high"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_low"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_value_t"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_volume_t"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_freq"
                    android:textAlignment="center"
                    app:txtFor="caption"
                    app:txtStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_table_daily_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                android:orientation="vertical"
                android:clickable="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_stock_detail_daily_two" />
        </LinearLayout>
    </HorizontalScrollView>

</layout>
