<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <com.bcasekuritas.mybest.widget.textview.CustomTextView
            android:id="@+id/tv_title_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_filter"
            app:txtStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:txtFor="bigBold" />

        <com.bcasekuritas.mybest.widget.textview.CustomTextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_time"
            app:txtStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_filter"
            app:txtFor="title" />

        <LinearLayout
            android:id="@+id/ll_filter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_from"
                    android:layout_marginBottom="4dp"
                    app:txtColor="grey"
                    app:txtStyle="bold"
                    app:txtFor="caption" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:id="@+id/tv_filter_date_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_dae8f6_8"
                    android:drawableEnd="@drawable/ic_calender"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:hint="Select date"
                    android:textColor="@color/black"
                    app:txtFor="body" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:txtFor="body" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/textPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to"
                    android:layout_marginBottom="4dp"
                    app:txtStyle="bold"
                    app:txtColor="grey"
                    app:txtFor="smallBold" />

                <com.bcasekuritas.mybest.widget.textview.CustomTextView
                    android:id="@+id/tv_filter_date_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:background="@drawable/rounded_dae8f6_8"
                    android:gravity="center_vertical"
                    android:drawableEnd="@drawable/ic_calender"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:hint="Select date"
                    app:txtFor="body" />
            </LinearLayout>
        </LinearLayout>

        <com.bcasekuritas.mybest.widget.textview.CustomTextView
            android:id="@+id/tv_title_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_filter_date"
            app:txtStyle="bold"
            app:txtFor="title" />

        <CheckedTextView
            android:id="@+id/ctv_filter_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/text_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_transaction"/>

        <CheckedTextView
            android:id="@+id/ctv_filter_dividend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/text_dividend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctv_filter_all"/>

        <CheckedTextView
            android:id="@+id/ctv_filter_topup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/text_top_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctv_filter_dividend"/>

        <CheckedTextView
            android:id="@+id/ctv_filter_withdrawal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/text_withdrawal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctv_filter_topup"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctv_filter_withdrawal">

            <com.bcasekuritas.mybest.widget.button.CustomButton
                android:id="@+id/button_filter_reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_reset"
                android:textSize="16dp"
                android:textAllCaps="false"
                app:btnStyle="outline" />

            <com.bcasekuritas.mybest.widget.button.CustomButton
                android:id="@+id/button_filter_apply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/text_apply"
                app:btnStyle="primary"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <com.bcasekuritas.mybest.widget.button.CustomButton
            android:id="@+id/button_filter_close"
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:btnStyle="transBlack"
            app:icon="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_filter"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_filter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>