<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vmChangePassword"
            type="com.bcasekuritas.mybest.app.feature.security.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgWhite">

        <include
            android:id="@+id/ly_toolbar_change_password"
            layout="@layout/layout_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/btn_save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_toolbar_change_password">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="25dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <com.bcasekuritas.mybest.widget.edittext.CustomEditTextWithTitle
                    android:id="@+id/edt_current_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:edittextfor="password"
                    app:hint="@string/text_enter_current_password"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/text_current_password" />

                <com.bcasekuritas.mybest.widget.edittext.CustomEditTextWithTitle
                    android:id="@+id/edt_new_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:edittextfor="password"
                    app:hint="@string/text_create_new_password"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/edt_current_password"
                    app:title="@string/text_new_password" />

                <com.bcasekuritas.mybest.widget.edittext.CustomEditTextWithTitle
                    android:id="@+id/edt_re_enter_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:edittextfor="password"
                    app:hint="@string/text_re_enter_new_password"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/edt_new_password"
                    app:title="@string/text_re_enter_new_password" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.bcasekuritas.mybest.widget.textview.CustomTextView
            android:id="@+id/tv_error_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:txtFor="body"
            app:txtColor="red"
            android:visibility="visible"
            tools:text="Please check your entered keyword"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_save_changes"/>

        <com.bcasekuritas.mybest.widget.button.CustomButton
            android:id="@+id/btn_save_changes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_save_changes"
            android:layout_margin="24dp"
            app:btnStyle="primary"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>